# flask_example

./: app.py  database.py  pyproject.toml
templates/: index.html  project-tasks.html
