[tool.poetry]
name = "train-flask-linkedin"
version = "0.1.0"
description = ""
authors = ["Sergei Smolov <sergei_smolov@epam.com>"]
readme = "README.md"
packages = [{include = "train_flask_linkedin"}]

[tool.poetry.dependencies]
python = "3.10.11"
psycopg2-binary = "^2.9.6"
SQLAlchemy = "^2.0.15"
Flask = "^2.3.2"
flask-sqlalchemy = "^3.0.3"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
